--- a/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
+++ b/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Thêm thu/chi tiền cho giao dịch [{{ txnCode }}]</h1>
 <div mat-dialog-content>
-  <span style="color: #e74c3c">{{ messageNoti }}</span>
+  <span style="color: #e74c3c">{{ messageError }}</span>
   <div class="custom-files-input" fxLayout="column">
     <div fxLayout="column" *ngIf="transactionPaid" [formGroup]="formDialogPaid">
       <h3>Tài khoản chi</h3>
