--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -114,7 +114,7 @@
   <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
-  <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button>
+  <!-- <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button> -->
 
 </mat-menu>
 <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false">
