--- a/src/app/home/calendar/calendar.component.html
+++ b/src/app/home/calendar/calendar.component.html
@@ -1,25 +1,27 @@
 <!-- Phần calendar -->
 <div fxLayout="column" class="midascalendar">
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around start" fxLayoutGap="1%">
-
-    <mat-button-toggle-group  color="primary" appearance="legacy" name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle color="primary" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
-        (viewDateChange)="closeOpenMonthViewDay()">Tháng trước</mat-button-toggle>
-      <mat-button-toggle mwlCalendarToday [(viewDate)]="viewDate">Tháng này</mat-button-toggle>
-      <mat-button-toggle mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
-        (viewDateChange)="closeOpenMonthViewDay()">Tháng sau</mat-button-toggle>
-    </mat-button-toggle-group>
-
-    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
-
-    <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month">Lịch tháng
+    <div fxFlex="55">
+    <mat-button-toggle-group   name="fontStyle" aria-label="Font Style"  style="width: 300px;">
+      <mat-button-toggle  (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month" style="width: 100px;">Lịch tháng
       </mat-button-toggle>
-      <mat-button-toggle (click)="setView(CalendarView.Week)" [class.active]="view === CalendarView.Week">Lịch tuần
+      <mat-button-toggle  (click)="setView(CalendarView.Week)" [class.active]="view === CalendarView.Week" style="width: 100px;">Lịch tuần
       </mat-button-toggle>
-      <mat-button-toggle (click)="setView(CalendarView.Day)" [class.active]="view === CalendarView.Day">Lịch ngày
+      <mat-button-toggle  (click)="setView(CalendarView.Day)" [class.active]="view === CalendarView.Day" style="width: 100px;">Lịch ngày
       </mat-button-toggle>
     </mat-button-toggle-group>
+    <mat-button-toggle-group   name="fontStyle" aria-label="Font Style" style="width: 300px;">
+      <mat-button-toggle  mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
+        (viewDateChange)="closeOpenMonthViewDay()" style="width: 100px;">Tháng trước</mat-button-toggle>
+      <mat-button-toggle  mwlCalendarToday [(viewDate)]="viewDate" style="width: 100px;">Tháng này</mat-button-toggle>
+      <mat-button-toggle  mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
+        (viewDateChange)="closeOpenMonthViewDay()" style="width: 100px;">Tháng sau</mat-button-toggle>
+    </mat-button-toggle-group>
+  </div>
+  <div fxFlex fxFlexAlign="center center"> <h3 >{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3></div>
+   
+
+    
 
   </div>
   <br />
