--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -150,8 +150,8 @@
 
         <mat-form-field fxFlex="18%">
           <mat-label>Nhân viên</mat-label>
-          <mat-select formControlName="staffId">
-            <mat-option *ngFor="let type of staffs" [value]="type.id">
+          <mat-select formControlName="createdBy">
+            <mat-option *ngFor="let type of staffs" [value]="type.userId">
               {{ type.displayName }}
             </mat-option>
           </mat-select>
