--- a/src/app/terminals/create-terminals/create-terminals.component.html
+++ b/src/app/terminals/create-terminals/create-terminals.component.html
@@ -91,7 +91,7 @@
                   [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
                 <mat-error *ngIf="createTerminalForm.controls.minFeeDefault.hasError('min')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
-                <mat-error *ngIf="editTerminalForm.controls.minFeeDefault.hasError('min')"
+                <mat-error *ngIf="createTerminalForm.controls.minFeeDefault.hasError('max')"
                   [innerHTML]="'Phí phải nhỏ hơn 1,000,000'"></mat-error>
             </mat-form-field>
 
