--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -93,7 +93,7 @@
                   [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' |translate"></mat-error>
                 <mat-error *ngIf="editTerminalForm.controls.minFeeDefault.hasError('min')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' |translate"></mat-error>
-                  <mat-error *ngIf="editTerminalForm.controls.minFeeDefault.hasError('min')"
+                  <mat-error *ngIf="editTerminalForm.controls.minFeeDefault.hasError('max')"
                   [innerHTML]="'Phí phải nhỏ hơn 1,000,000'"></mat-error>
             </mat-form-field>
 
