--- a/src/app/home/calendar/calendar.component.html
+++ b/src/app/home/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <!-- Phần calendar -->
 <div fxLayout="column" class="midascalendar">
-  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around center" fxLayoutGap="2%">
-    <div fxFlex="55">
+  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around center" fxLayoutAlign.lt-md="center center" fxLayoutGap="2%">
+    <div fxFlex="55" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center" >
       <mat-button-toggle-group name="fontStyle" aria-label="Font Style" style="width: 300px;">
         <mat-button-toggle  (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month"
           style="width: 100px;"><i class="fas fa-calendar"></i> Lịch tháng
